syntax = "proto3";

package metrics;

option go_package = "metrics/proto";

enum MetricType {
  gauge = 0;
  counter = 1;
}

message Metric {
  string id = 1;        // имя метрики
  MetricType type = 2;  // параметр, принимающий значение gauge или counter
  int64 delta = 3;      // значение метрики в случае передачи counter
  double value = 4;     // значение метрики в случае передачи gauge
}

message AddMetricsRequest {
  repeated Metric metrics = 1;
}

message AddMetricsResponse {
  string error = 1; // ошибка
}

message GetMetricRequest {
  string id = 1;
  MetricType type = 2;
}

message GetMetricResponse {
  Metric metric = 1;
  string error = 2; // ошибка
}

message GetMetricsRequest {}

message GetMetricsResponse {
  repeated Metric metrics = 1;
  string error = 2; // ошибка
}

service Metrics {
  rpc AddMetrics(AddMetricsRequest) returns (AddMetricsResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);
}
